# mosaicworkflow

./: CLAUDE.md  README.md  ROFFtoGrimp.py  makeimagemosaics.py  makemosaic.py  prepareTSXrelease.py  pyproject.toml  setupSigmamosaics.py  setupannualmosaics.py  setupimagemosaic.py  setupquarters.py
Documents/: makeframetie.md  makemosaic.md  maketies.md  refreshties.md  setupquarters.md  setuptopstie.md  simoffsets.md
mosaicworkflow/: ROFFtoGrimp.py  RUNWtoGrimp.py  __init__.py  initRAReference.py  makeframetie.py  makeimagemosaics.py  makemosaic.py  maketies.py  makevelstatsregions.py  prepareTSXrelease.py  refreshties.py  setupimagemosaic.py  setupquarters.py  setuptopstie.py  simoffsets.py  velocityStats.py
